# noetic-core

./: CONTRIBUTING.md  GEMINI.md  README.md  fix_package_name.sh  my_agent.noetic  noetic.db  noetic_cli.db  run_lang_tests.py  run_tests.py  run_tests_temp.py  test_e2e_8001.db  test_verification.py
.agent/: persona.md
engines/python/: main.py  pyproject.toml  test_e2e_8001.db
engines/python/noetic-engine/conscience/: audit.py  evaluator.py
engines/python/noetic-engine/orchestration/: agents.py  planner.py  principles.py
engines/python/noetic-engine/runtime/: engine.py
engines/python/noetic-engine/skills/: interfaces.py
engines/python/noetic_engine/: loader.py
engines/python/noetic_engine/canvas/: reflex.py  renderer.py  schema.py
engines/python/noetic_engine/cognition/: flow_manager.py  planner.py
engines/python/noetic_engine/knowledge/: README.md  Tech_Spec.md  schema.py  store.py
engines/python/noetic_engine/orchestration/: agents.py  evaluator.py  flows.py  schema.py
engines/python/noetic_engine/runtime/: cognitive.py  engine.py
engines/python/noetic_engine/skills/: registry.py
engines/python/noetic_engine/stanzas/: agents.py  flows.py  schema.py
engines/python/tests/: test_e2e.py  test_loader.py  test_playwright.py
engines/python/tests/canvas/: test_bindings.py
engines/python/tests/conscience/: test_audit.py  test_tag_inheritance.py
noetic-lang/: MANIFEST.in  generate_schemas.py  pyproject.toml
noetic-lang/examples/: TODO.noetic
noetic-lang/spec/: agent.schema.json  flow.schema.json
noetic-lang/src/noetic_lang/: __init__.py
noetic-lang/stdlib/agents/: architect.noetic  system.noetic
noetic-lang/stdlib/stanzas/: coding.noetic
(+37 files in other folders)
