[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noetic-lang"
version = "3.0.0"
description = "The core protocol definition for the Noetic Ecosystem."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
